add comments to may'25 post

--- a/content/now/may-2025.md
+++ b/content/now/may-2025.md
@@ -3,6 +3,7 @@ title: May 2025
 summary: Found a new pickup group to play badminton with, fell sick, met my senior from college, had a cyst near my tailbone, watched movies, and played my first Castlevania game.
 date: 2025-06-01T21:52:00+05:30
 date-edited: 2025-06-05T23:03:00+05:30
+cast-hash: 0x9d6439b0
 ---
 
 For the longest time, I'd been searching for a pickup group in Hyderabad. Ideally, one that has members who play well, regularly, and in the mornings. It's nearly impossible for a group to meet all 3 of these criteria. Naturally, I was elated when I found one this month! The organizers are mutuals, and I've played with them before. My senior from college joins them whenever he's in town. I met one of them last month in a badminton hall when I went to play with my friends. We caught up, and I mentioned that I was looking for a group to play with regularly, so he invited me to join them.
